src/objects/c2g__codaBankReconciliationLineItem__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpbankreconciliationlineitem</customHelpPage>
    <description>Stores bank reconciliation line item details.</description>
    <fields>
        <fullName>c2g__BankReconciliation__c</fullName>
        <label>Bank Reconciliation</label>
        <referenceTo>c2g__codaBankReconciliation__c</referenceTo>
        <relationshipLabel>Bank Reconciliation Line Items</relationshipLabel>
        <relationshipName>BankReconciliationLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__Deposit__c</fullName>
        <formula>if(c2g__Value__c&gt;0, c2g__Value__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentDate__c</fullName>
        <formula>c2g__TransactionLineItem__r.c2g__Transaction__r.c2g__TransactionDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentDescription__c</fullName>
        <formula>c2g__TransactionLineItem__r.c2g__Transaction__r.c2g__DocumentDescription__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentReference__c</fullName>
        <formula>c2g__TransactionLineItem__r.c2g__Transaction__r.c2g__DocumentReference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__TransactionLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Line Item</label>
        <referenceTo>c2g__codaTransactionLineItem__c</referenceTo>
        <relationshipName>ReconciliationLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TransactionType__c</fullName>
        <formula>text(c2g__TransactionLineItem__r.c2g__Transaction__r.c2g__TransactionType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Withdrawal__c</fullName>
        <formula>if(c2g__Value__c&lt;0, -c2g__Value__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Withdrawal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Bank Reconciliation Line Item</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__TransactionLineItem__c</columns>
        <columns>c2g__DocumentDate__c</columns>
        <columns>c2g__DocumentDescription__c</columns>
        <columns>c2g__DocumentReference__c</columns>
        <columns>c2g__Withdrawal__c</columns>
        <columns>c2g__Deposit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Reconciliation Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>